--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "rpg_game",
   "version": "1.0.0",
   "description": "RPGgame",
-  "main": "app.js",
+  "main": "main.js",
+  "dependencies": {
+    "express": "^4.15.4"
+  },
+  "devDependencies": {
+    "body-parser": "^1.18.2",
+    "electron-packager": "^9.1.0",
+    "express": "^4.15.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ."
