--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "RPGgame",
   "main": "main.js",
   "dependencies": {
-    "express": "^4.15.4"
+    "crypto": "^1.0.1",
+    "express": "^4.15.4",
+    "mysql": "^2.15.0"
   },
   "devDependencies": {
     "body-parser": "^1.18.2",
