--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rpg_game",
-  "version": "1.0.0",
+  "version": "1.4.13",
   "description": "RPGgame",
   "main": "main.js",
   "dependencies": {
@@ -10,12 +10,14 @@
   },
   "devDependencies": {
     "body-parser": "^1.18.2",
+    "electron-builder": "^19.42.2",
     "electron-packager": "^9.1.0",
     "express": "^4.15.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-packager . MyApp --platform=darwin --arch=x64 --electron-version=1.4.13 --ignore=node_modules/electron-* --overwrite"
   },
   "author": "LordlyCat",
   "license": "ISC"
